[metadata]
name = twisted-iocpsupport
version = 1.0.4.dev0
description = An extension for use in the twisted I/O Completion Ports reactor.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Twisted Matrix Laboratories
author_email = twisted-python@twistedmatrix.com
maintainer = Thomas Grainger
maintainer_email = twisted-iocpsupport@graingert.co.uk
url = https://github.com/twisted/twisted-iocpsupport
license = MIT
python_requires = >=3.6
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:

[zest.releaser]
tag-format = v{version}
